--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     width: 80%;
-    max-width: 600px;
 }
 h1 {
     text-align: center;
@@ -55,4 +54,33 @@ h1 {
     text-align: center;
     margin-bottom: 20px;
     font-size: 16px;
+}
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+.nav-btn {
+    width: 37.5px;
+    height: 37.5px;
+    margin: 5px;
+    border: none;
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+}
+.nav-btn.unanswered {
+    background-color: #555;
+    cursor: not-allowed;
+}
+.nav-btn.correct {
+    background-color: #4caf50; /* Xanh lá cây */
+}
+.nav-btn.incorrect {
+    background-color: #f44336; /* Đỏ */
+}
+.nav-btn.current {
+    background-color: #2196f3; /* Xanh dương */
 }
